# Siamese_FWI

./: FWIGAN.yml  README.md  SiameseFWI_Marmousi.ipynb  SiameseFWI_bad_initial_Marmousi.ipynb  SiameseFWI_bad_initial_Overthurst.ipynb  SiameseFWI_overethrust.ipynb  install_env.sh  pyproject.toml
Model/: Module22.py
data/: mar_big_initmodel.mat  mar_big_initsource.mat  over_initmodel.mat  over_initmodel_FLAT.mat  over_initsource.mat
utils/: utils.py
